testdata/language-features/basic-values/if04.reject.out
type error: can not unify
[32m'Tuple0[m
with
[32m'Char[m

in testdata/language-features/basic-values/if04.reject.lc:1:31:
value1 = if True then () else '_'
                              ^^^

------------ trace
infer:  [47mlabelend (primIfThenElse True Tuple0 '_')[49m[K
infer:  labEnd ([47mprimIfThenElse True Tuple0 '_'[49m)[K
infer:  labEnd ([47mprimIfThenElse True Tuple0[49m '_')[K
infer:  labEnd ([47mprimIfThenElse True[49m Tuple0 '_')[K
infer:  labEnd ([47mprimIfThenElse[49m True Tuple0 '_')[K
focus:  labEnd ([47m[32mprimIfThenElse[39m[49m True Tuple0 '_')[K
focus:  labEnd ([47m[32mprimIfThenElse[39m[49m {_ : _:'Type} True Tuple0 '_')[K
check:  labEnd ([32mprimIfThenElse[39m {[47m(_ : _:'Type) :: [32mType[39m[49m} True Tuple0 '_')[K
infer:  labEnd ([32mprimIfThenElse[39m {([47m_ : _:'Type[49m) : [32mType[39m} True Tuple0 '_')[K
infer:  labEnd ([32mprimIfThenElse[39m {\([34ma[39m : [47m_:'Type[49m)->a : [32mType[39m} True Tuple0 '_')[K
infer:  labEnd ([32mprimIfThenElse[39m {\([34mb[39m : (\[34ma[39m:[47m'Type[49m -> a))->b : [32mType[39m} True Tuple0 '_')[K
focus:  labEnd ([32mprimIfThenElse[39m {\([34mb[39m : (\[34ma[39m:[47m[32mType[39m[49m -> a))->b : [32mType[39m} True Tuple0 '_')[K
infer:  labEnd ([32mprimIfThenElse[39m {\([34mb[39m : \[34ma[39m->[47ma[49m)->b : [32mType[39m} True Tuple0 '_')[K
focus:  labEnd ([32mprimIfThenElse[39m {\([34mb[39m : \[34ma[39m->[47m[32ma[39m[49m)->b : [32mType[39m} True Tuple0 '_')[K
focus:  labEnd ([32mprimIfThenElse[39m {(\[34ma[39m [34mb[39m:[47m[32ma[39m[49m -> b) : [32mType[39m} True Tuple0 '_')[K
infer:  labEnd ([32mprimIfThenElse[39m {(\[34ma[39m [34mb[39m:[32ma[39m -> [47mb[49m) : [32mType[39m} True Tuple0 '_')[K
focus:  labEnd ([32mprimIfThenElse[39m {(\[34ma[39m [34mb[39m:[32ma[39m -> [47m[32mb[39m[49m) : [32mType[39m} True Tuple0 '_')[K
focus:  labEnd ([32mprimIfThenElse[39m {\[34ma[39m [34mb[39m:[32ma[39m -> [47m[32mb[39m[49m:[32mType[39m} True Tuple0 '_')[K
focus:  labEnd ([32mprimIfThenElse[39m {\[34ma[39m [34mb[39m:[32ma[39m -> \([34mc[39m : [32mType~a[39m)->[47m[32mb[39m[49m} True Tuple0 '_')[K
focus:  labEnd ([32mprimIfThenElse[39m {\[34ma[39m [34mb[39m:[32ma[39m [34ma[39m:=[32mType[39m -> [47m[32mb[39m[49m} True Tuple0 '_')[K
focus:  labEnd ([32mprimIfThenElse[39m {\[34ma[39m [34ma[39m:=[32mType[39m -> \[34mb[39m->[47m[32mb[39m[49m} True Tuple0 '_')[K
focus:  labEnd ([32mprimIfThenElse[39m {\[34ma[39m->[47m[32ma[39m[49m} True Tuple0 '_')[K
focus:  labEnd ((\[34ma[39m -> [32mprimIfThenElse[39m {[47m[32ma[39m[49m}) True Tuple0 '_')[K
focus:  labEnd ((\[34ma[39m -> [47m[32mprimIfThenElse a[39m[49m) True Tuple0 '_')[K
focus:  labEnd ((\[34ma[39m -> [47m[32mprimIfThenElse a[39m[49m True) Tuple0 '_')[K
check:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a[39m [47mTrue::[32m'Bool[39m[49m) Tuple0 '_')[K
infer:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a[39m [47mTrue[49m:[32m'Bool[39m) Tuple0 '_')[K
focus:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a[39m [47m[32mTrue[39m[49m:[32m'Bool[39m) Tuple0 '_')[K
focus:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a[39m (\[34mb[39m:[32m'Unit[39m -> [47m[32mTrue[39m[49m)) Tuple0 '_')[K
focus:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a[39m [47m[32mTrue[39m[49m) Tuple0 '_')[K
focus:  labEnd ((\[34ma[39m -> [47m[32mprimIfThenElse a True[39m[49m) Tuple0 '_')[K
focus:  labEnd ((\[34ma[39m -> [47m[32mprimIfThenElse a True[39m[49m Tuple0) '_')[K
check:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a True[39m [47mTuple0::[32ma[39m[49m) '_')[K
infer:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a True[39m [47mTuple0[49m:[32ma[39m) '_')[K
focus:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a True[39m [47m[32mTuple0[39m[49m:[32ma[39m) '_')[K
focus:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a True[39m \([34mb[39m : [32ma~'Tuple0[39m)->[47m[32mTuple0[39m[49m) '_')[K
focus:  labEnd ((\[34ma[39m -> [32mprimIfThenElse a True[39m (\[34ma[39m:=[32m'Tuple0[39m -> [47m[32mTuple0[39m[49m)) '_')[K
focus:  labEnd ((\[34ma[39m [34ma[39m:=[32m'Tuple0[39m -> [32mprimIfThenElse 'Tuple0 True[39m [47m[32mTuple0[39m[49m) '_')[K
focus:  labEnd ((\[34ma[39m [34ma[39m:=[32m'Tuple0[39m -> [47m[32mprimIfThenElse 'Tuple0 True Tuple0[39m[49m) '_')[K
focus:  labEnd ([47m[32mprimIfThenElse 'Tuple0 True Tuple0[39m[49m '_')[K
check:  labEnd ([32mprimIfThenElse 'Tuple0 True Tuple0[39m [47m'_'::[32m'Tuple0[39m[49m)[K
infer:  labEnd ([32mprimIfThenElse 'Tuple0 True Tuple0[39m [47m'_'[49m:[32m'Tuple0[39m)[K
focus:  labEnd ([32mprimIfThenElse 'Tuple0 True Tuple0[39m [47m[32m'_'[39m[49m:[32m'Tuple0[39m)[K
focus:  labEnd ([32mprimIfThenElse 'Tuple0 True Tuple0[39m \([34ma[39m : [32m'Empty "can not unify\n\ESC[32m'Tuple0\ESC[m\nwith\n\ESC[32m'Char\ESC[m\n"[39m)->[47m[32m'_'[39m[49m)[K
!type error: can not unify
[32m'Tuple0[m
with
[32m'Char[m

in testdata/language-features/basic-values/if04.reject.lc:1:31

------------ tooltips
testdata/language-features/basic-values/if04.reject.lc 1:13-1:17  Bool
testdata/language-features/basic-values/if04.reject.lc 1:13-1:25  Tuple0->Tuple0
testdata/language-features/basic-values/if04.reject.lc 1:23-1:25  Tuple0
testdata/language-features/basic-values/if04.reject.lc 1:31-1:34  Char
